--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,11 +16,15 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
+    "passport": "^0.4.1",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
