--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,9 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "MongoDB",
@@ -15,19 +15,30 @@
   "author": "Roshan Bhuvad",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^10.0.0",
+    "bcrypt": "^5.0.0",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-history-api-fallback": "^2.2.1",
     "express-session": "^1.17.1",
+    "http": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.2",
     "mongoose": "^5.10.6",
+    "morgan": "^1.10.0",
     "passport": "^0.4.1",
-    "uuid": "^8.3.0"
+    "passport-github2": "^0.1.12",
+    "passport-twitter": "^1.0.4",
+    "uuid-v4": "^0.1.0",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "nodemon": "^2.0.4"
   }
 }
