--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
   "author": "Roshan Bhuvad",
   "license": "MIT",
   "dependencies": {
+    "assert": "^2.0.0",
     "autoprefixer": "^10.0.0",
     "bcrypt": "^5.0.0",
     "bluebird": "^3.7.2",
